--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -95,6 +95,7 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-blue
                 div.unit__contact-us-wrap
                     div.icon.icon--theme-contact-circle
+                        div.icon.icon--theme-contact-circle-bg
                     div.icon.icon--theme-play-arrow-down
                     span.unit__info.unit__info--small-medium.unit__info--white-text.unit__info--uppercase Contact us
 
