--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -5,6 +5,11 @@
     font-weight 600
     font-family Montserrat, sans-serif;
 
+  &--norm-medium
+    font-size 14px
+    font-weight 600
+    font-family Montserrat, sans-serif;
+
   &--medium
     font-size 21px
     font-weight 500
