--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -111,24 +111,24 @@ div.main.main--theme-white-gr
             div.unit.unit--horizontal-double-unit.unit--white
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-bold-text Martin H.Jhonsons
+                    span.unit__info.unit__info--norm-medium.unit__info--black-text Martin H. Jhonsons
                     div.icon.icon--person-rate4
 
-                p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
+                p.unit__article.unit__article--centered-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
 
             div.unit.unit--horizontal-double-unit
-                h2.unit__title.unit__title--big-bold.unit__title--top-margin2.unit__title--theme-unit-black-title Your building is in good hands
+                h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text Your building is in good hands
                 hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--text-width419 Our mission is to provide the highest level of service for our client-partners from concept through construction.
+                p.unit__article.unit__article--black-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
                 input.button.button--theme-unit-btn.button--black-bg.button--text-white(type="button", value="About company")
 
             div.unit.unit--horizontal-double-unit.unit--soft-gold
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-bold-text Tony SH. Schults
+                    span.unit__info.unit__info--norm-medium.unit__info--black-text Tony SH. Schults
                     div.icon.icon--person-rate5
 
-                p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from concept-through-construction.
+                p.unit__article.unit__article--centered-text.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from concept-through-construction.
                 div.unit__horiz-inline-center-wrap
                     hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--inline
