--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -135,13 +135,15 @@ div.main.main--theme-white-gr
 
             div.unit.unit--white
                 div.icon.icon--blue-square
-                    div.icon.icon--ligthinig-blue
+                    div.icon.icon--blue-square-bg
+                        div.icon.icon--ligthinig-blue
                 span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 55 000
                 span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Expert Witness
 
             div.unit
                 div.icon.icon--blue-square
-                    div.icon.icon--raindrop
+                    div.icon.icon--blue-square-bg
+                        div.icon.icon--raindrop
                 span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 124 600
                 span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Construction
 
@@ -165,13 +167,15 @@ div.main.main--theme-white-gr
 
             div.unit
                 div.icon.icon--blue-square
-                    div.icon.icon--setting-tool-blue
+                    div.icon.icon--blue-square-bg
+                        div.icon.icon--setting-tool-blue
                 span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 18 000
                 span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Procurement
 
             div.unit.unit--white
                 div.icon.icon--blue-square
-                    div.icon.icon--light-bulb
+                    div.icon.icon--blue-square-bg
+                        div.icon.icon--light-bulb
                 span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 78 150
                 span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Project Managments
 
