--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -92,6 +92,9 @@
     height 67px
     background-color #ffffff
 
+    &--grey
+      background-color #d6d6d6
+
   &--ligthinig-blue
     position absolute
     top 14px
