--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -1,5 +1,8 @@
 &__info
 
+  &--block
+    display block
+
   &--small-medium
     font-size 12px
     font-weight 600
@@ -27,6 +30,16 @@
 
   &--white-text
     color #ffffff
+
+  &--grey-text
+    color #a0a0a0
+
+  &--dark-grey-text
+    color #707070
+
+  &--white-blue-text
+    color #ffffff
+    opacity .5
 
   &--uppercase
     text-transform uppercase
