--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -31,3 +31,12 @@
 
   &--black-text
     color #363636
+
+  &--white-text
+    color #ffffff
+
+  &--letter-spacing018
+    letter-spacing .18px
+
+  &--uppercase-disabled
+    text-transform none
