--- a/app/stylus/blocks/form/form.styl
+++ b/app/stylus/blocks/form/form.styl
@@ -20,7 +20,7 @@
 
     &--theme-unit-search-white
       width 100%
-      padding 13px 7px
+      padding 13px 7px 13px 11px
       box-sizing border-box
       font-family Montserrat, sans-serif;
       font-size 14px
@@ -57,7 +57,7 @@
     &--theme-link-submit
       float right
       margin-top 30px
-      margin-right -10px
+      margin-right -7px
       border none
       background-color #2297d8
 
