--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -137,21 +137,21 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--ligthinig-blue
-                span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 55 000
-                span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Expert Witness
+                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 55 000
+                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Expert Witness
 
-            div.unit
+            div.unit.unit--theme-foto
                 div.icon.icon--blue-square
-                    div.icon.icon--blue-square-bg
+                    div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--raindrop
-                span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 124 600
-                span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Construction
+                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 124 600
+                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Construction
 
             div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--fix-margin-bottom-news.unit__title--white-text News
-                p.unit__info.unit__info--norm-text.unit__info--white-blue-text 12 february, 2015
-                h3.unit__title.unit__title--bold.unit__title--white-text Project Design and Engineering Services
-                p.unit__info.unit__info--norm-text.unit__info--white-blue-text 23 comments
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text News
+                p.unit__info.unit__info--norm-medium.unit__info--white-blue-text 12 february, 2015
+                h3.unit__title.unit__title--med-bold.unit__title--white-text Project Design and Engineering Services
+                p.unit__info.unit__info--norm-medium.unit__info--white-blue-text 23 comments
                 div.unit__horiz-inline-wrap.unit__horiz-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
@@ -160,27 +160,28 @@ div.main.main--theme-white-gr
             div.unit.unit--white
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-bold-text.unit__info--black-text David Mc. Adams
+                    span.unit__info.unit__info--norm-medium.unit__info--black-text David Mc. Adams
                     div.icon.icon--person-rate4
 
-                p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
+                p.unit__article.unit__article--centered-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
 
-            div.unit
+            div.unit.unit--theme-foto
                 div.icon.icon--blue-square
-                    div.icon.icon--blue-square-bg
+                    div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--setting-tool-blue
-                span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 18 000
-                span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Procurement
+                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 18 000
+                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Procurement
 
             div.unit.unit--white
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--light-bulb
-                span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 78 150
-                span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Project Managments
+                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 78 150
+                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Project Managments
 
             div.unit.unit--vertical-double-unit.unit--white
-                h2.unit__title.unit__title--big-bold.unit__title--uppercase-disabled.unit__title--text-width Contemporary Villa
+                //.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text.unit__title--uppercase-disabled Contemporary Villa
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
                 p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
@@ -190,23 +191,28 @@ div.main.main--theme-white-gr
             div.unit.unit--big-bg-layer-unit.unit--transparent
                 div.unit__bottom-right-unit-wrap
                     div.unit.unit--theme-info
-                        input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
+                        div.unit__fix-padding-unit-with-arrow-hower
+                        div.unit__button-arrow-wrap
+                            button.button.button--theme-arrow.button--arrow-next
+                                div.icon.icon--arrow-next-inside
 
                         div.unit__info-wrap
-                            span.unit__info.unit__info--big-text.unit__info--black-text 01
-                                sup.unit__info.unit__info--med-text.unit__info--black-text /09
+                            span.unit__info.unit__info--big-medium.unit__info--black-text 01
+                                sup.unit__info.unit__info--medium.unit__info--black-text /09
 
-                        input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
+                        div.unit__button-arrow-wrap
+                            button.button.button--theme-arrow.button--arrow-prev
+                                div.icon.icon--arrow-prev-inside
 
             div.unit.unit--vertical-double-bg-layer-unit
                 div.unit.unit--theme-yellow
                     div.unit__download-price-wrap
                         div.icon.icon--icon-stars
-                        span.unit__info.unit__info--small-text.unit__info--black-text Work with us
+                        span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Work with us
 
 
                 div.unit.unit--theme-blue
-                    h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text subscribe
+                    h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text subscribe
                     hr.unit__horizontal.unit__horizontal--white-solid
                     div.unit__inner-form-aside
                         form.form
