--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -45,3 +45,7 @@
     padding-left 0
     padding-right 5px
     background url("../img/arr-prev-hover.png") no-repeat center
+
+  &--fix-btn-about-company
+    padding 15px 26px 16px 23px
+    font-weight 500
