--- a/app/stylus/blocks/unit/__article/__article.styl
+++ b/app/stylus/blocks/unit/__article/__article.styl
@@ -15,3 +15,8 @@
 
   &--centered-text
     text-align center
+
+  &--fix-for-your-buildig-is
+    margin-top 17px
+    margin-bottom 21px
+    width 420px
