--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -1,6 +1,11 @@
 &__title
   font-size 14px
 
+  &--med-regular
+    font-size 18px
+    font-weight 500
+    font-family Montserrat, sans-serif;
+
   &--med-bold
     width 155px
     font-size 18px
@@ -43,3 +48,7 @@
 
   &--fix-big-width
     margin-top -2px
+
+  &--fix-for-news
+    margin-top 0
+    margin-bottom 23px
