--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -149,8 +149,8 @@ div.main.main--theme-white-gr
 
             div.unit.unit--theme-blue
                 h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text News
-                p.unit__info.unit__info--norm-medium.unit__info--white-blue-text 12 february, 2015
-                h3.unit__title.unit__title--med-bold.unit__title--white-text Project Design and Engineering Services
+                p.unit__info.unit__info--norm-medium.unit__info--white-blue-text.unit__info--fix-for-news 12 february, 2015
+                h3.unit__title.unit__title--med-regular.unit__title--white-text.unit__title--fix-for-news Project Design and Engineering Services
                 p.unit__info.unit__info--norm-medium.unit__info--white-blue-text 23 comments
                 div.unit__horiz-inline-wrap.unit__horiz-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
