--- a/app/stylus/blocks/unit/__article/__article.styl
+++ b/app/stylus/blocks/unit/__article/__article.styl
@@ -20,3 +20,7 @@
     margin-top 17px
     margin-bottom 21px
     width 420px
+
+  &--fix-for-contemporary-vila
+    margin-left 1px;
+    margin-bottom 22px
