--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -180,15 +180,14 @@ div.main.main--theme-white-gr
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Project Managments
 
             div.unit.unit--vertical-double-unit.unit--white
-                //.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text
-                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text.unit__title--uppercase-disabled Contemporary Villa
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text.unit__title--uppercase-disabled.unit__title--fix-for-contemporary-vila Contemporary Villa
                 hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
+                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text.unit__article--fix-for-contemporary-vila Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
+                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text.unit__article--fix-for-contemporary-vila We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
                 div.unit__fix-button-view-project-wrap
-                    input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left(type="button", value="view project")
+                    input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left.button--fix-btn-view-project(type="button", value="view project")
 
-            div.unit.unit--big-bg-layer-unit.unit--transparent
+            div.unit.unit--big-bg-layer-unit.unit--theme-foto
                 div.unit__bottom-right-unit-wrap
                     div.unit.unit--theme-info
                         div.unit__fix-padding-unit-with-arrow-hower
