--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -357,7 +357,7 @@ body
     color #9b9b9b
     font-family Montserrat, sans-serif;
     font-size 12px
-    font-weight 400
+    font-weight 600
 
   &_theme-text-mark
     color: #2297d8
@@ -366,7 +366,7 @@ body
     color #a2a2a2
     font-family Montserrat, sans-serif;
     font-size 12px
-    font-weight 400
+    font-weight 600
   //Элемент для контента футера
   &__content
     width 1172px
@@ -383,7 +383,7 @@ body
   &__container
     &__container-inner
       position relative
-      top 33px
+      top 32px
 
     &__text-inner
       display inline-block
@@ -395,6 +395,9 @@ body
       content ""
       display table
       clear both
+
+    &--menu-items-space
+      margin-right 30px
 
 /*===============================Блок кнопка============================*/
 @import "blocks/button/button.styl"
