--- a/app/views/footer/footer.pug
+++ b/app/views/footer/footer.pug
@@ -7,17 +7,17 @@ footer.footer.footer_theme-white-grey
             //Блок для меню
             div.menu.footer__container__menu-inner
                 ul.menu__items
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="our-services.html", target="blank") Services
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") OurWorks
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") News & events
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") Worck with us
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") F.A.Q
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") Contact us
-                    li.menu__item
+                    li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") Shop
