--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -399,6 +399,11 @@ body
     &--menu-items-space
       margin-right 30px
 
+    &--fix-inner-our-service-page
+      position relative
+      top 29px
+
+
 /*===============================Блок кнопка============================*/
 @import "blocks/button/button.styl"
 
