--- a/app/views/our-services.pug
+++ b/app/views/our-services.pug
@@ -12,4 +12,4 @@ html
         //Тело сайта
         include body/our-services/our-services.pug
         //Футтер
-        include footer/footer.pug
+        include footer/footer-our-service.pug
