--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -34,6 +34,16 @@
     margin-top -3px
     margin-bottom 15px
 
+  &--med-width-h3-155
+    width 155px
+    margin-top -3px
+    margin-bottom 15px
+
+  &--med-width-h3-136
+    width 136px
+    margin-top -1px
+    margin-bottom 15px
+
   &--black-text
     color #363636
 
