--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -4,10 +4,10 @@ div.main.main--theme-white-gr
         //Колонка для всего остального
         aside.main__column-aside.main__column-inner-right
             div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text popular posts
-                p.unit__info.unit__info--norm-text.unit__info--white-blue-text 12 february, 2015
-                h3.unit__title.unit__title--bold.unit__title--white-text Project Design and Engineering Services
-                p.unit__info.unit__info--norm-text.unit__info--white-blue-text 23 comments
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text popular posts
+                p.unit__info.unit__info--norm-medium.unit__info--white-blue-text.unit__info--fix-for-news 12 february, 2015
+                h3.unit__title.unit__title--med-regular.unit__title--white-text.unit__title--fix-for-news Project Design and Engineering Services
+                p.unit__info.unit__info--norm-medium.unit__info--white-blue-text 23 comments
                 div.unit__horiz-inline-wrap.unit__horiz-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
@@ -16,10 +16,10 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-yellow
                 div.unit__download-price-wrap
                     div.icon.icon--theme-pdf
-                    span.unit__info.unit__info--small-text.unit__info--black-text Download price
+                    span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Download price
 
             div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text subscribe
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text subscribe
                 hr.unit__horizontal.unit__horizontal--white-solid
                 div.unit__inner-form-aside
                     form.form
@@ -29,16 +29,16 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-yellow
                 div.unit__download-price-wrap
                     div.icon.icon--icon-stars
-                    span.unit__info.unit__info--small-text.unit__info--black-text Work with us
+                    span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Work with us
 
         //Колонка для главного содержимого сайта
         main.main__column-main.main__column-main--theme-inline.main__column-inner-left
             div.main__double-unit
                 div.unit.unit--bg-layer-unit
                     div.unit.unit--theme-info
-                        h3.unit__title.unit__title--bold.unit__title--text-width General Contracting
+                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text General Contracting
                         hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
                     div.unit__arrow.unit__arrow--down
                 div.unit.unit--theme-foto
                     div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
@@ -50,7 +50,7 @@ div.main.main--theme-white-gr
                         span.unit__number.unit__number--text 2
                 div.unit.unit--bg-layer-unit
                     div.unit.unit--theme-info
-                        h3.unit__title.unit__title--bold.unit__title--text-width Project design and engineering
+                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3-155.unit__title--black-text Project design and engineering
                         hr.unit__horizontal.unit__horizontal--black-solid
                         p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
                     div.unit__arrow.unit__arrow--up
@@ -58,9 +58,9 @@ div.main.main--theme-white-gr
             div.main__double-unit
                 div.unit.unit--bg-layer-unit
                     div.unit.unit--theme-info
-                        h3.unit__title.unit__title--bold.unit__title--text-width Capital Improvements
+                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Capital Improvements
                         hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
                     div.unit__arrow.unit__arrow--down
                 div.unit.unit--theme-foto
                     div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
@@ -69,9 +69,9 @@ div.main.main--theme-white-gr
             div.main__double-unit
                 div.unit.unit--bg-layer-unit
                     div.unit.unit--theme-info
-                        h3.unit__title.unit__title--bold.unit__title--text-width Construction
+                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Construction
                         hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
                     div.unit__arrow.unit__arrow--down
                 div.unit.unit--theme-foto
                     div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
@@ -83,17 +83,17 @@ div.main.main--theme-white-gr
                         span.unit__number.unit__number--text 5
                 div.unit.unit--bg-layer-unit
                     div.unit.unit--theme-info
-                        h3.unit__title.unit__title--bold.unit__title--text-width Expert Witness
+                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3-136.unit__title--black-text Expert Witness
                         hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+                        p.unit__article.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
                     div.unit__arrow.unit__arrow--up
 
             div.main__double-unit
                 div.unit.unit--bg-layer-unit
                     div.unit.unit--theme-info
-                        h3.unit__title.unit__title--bold.unit__title--text-width Procurement
+                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Procurement
                         hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
                     div.unit__arrow.unit__arrow--down
                 div.unit.unit--theme-foto
                     div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
