--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -47,3 +47,7 @@
   &--fix-for-news
     margin-top 30px
     margin-bottom 6px
+
+  &--fix-for-popular-posts
+    margin-top 19px
+    margin-bottom -13px
