Рефакторинг страницы home-page.

--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -19,7 +19,7 @@ div.main.main--theme-white-gr
                         div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--big-medium.unit__info--black-text 01
+                    span.unit__info.unit__info--big-medium.unit__info--black-text.unit__info--letter-spacing3 01
                         sup.unit__info.unit__info--medium.unit__info--black-text /03
 
                 div.unit__button-arrow-wrap
@@ -64,8 +64,8 @@ div.main.main--theme-white-gr
                         div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--big-medium.unit__info--black-text 03
-                        sup.unit__info.unit__info--medium.unit__info--black-text /06
+                    span.unit__info.unit__info--biggest-medium.unit__info--black-text.unit__info--letter-spacing1 03
+                        sup.unit__info.unit__info--medium23.unit__info--black-text  / 06
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev-hover
@@ -137,14 +137,14 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--ligthinig-blue
-                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 55 000
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 55 000
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Expert Witness
 
             div.unit.unit--theme-foto
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--raindrop
-                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 124 600
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 124 600
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Construction
 
             div.unit.unit--theme-blue
@@ -169,14 +169,14 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--setting-tool-blue
-                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 18 000
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 18 000
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Procurement
 
             div.unit.unit--white
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--light-bulb
-                span.unit__info.unit__info--block.unit__info--big-medium.unit__info--dark-grey-text 78 150
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 78 150
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Project Managments
 
             div.unit.unit--vertical-double-unit.unit--white
@@ -196,8 +196,8 @@ div.main.main--theme-white-gr
                                 div.icon.icon--arrow-next-inside
 
                         div.unit__info-wrap
-                            span.unit__info.unit__info--big-medium.unit__info--black-text 01
-                                sup.unit__info.unit__info--medium.unit__info--black-text /09
+                            span.unit__info.unit__info--big-medium.unit__info--black-text.unit__info--letter-spacing3 01
+                                sup.unit__info.unit__info--medium.unit__info--black-text  / 09
 
                         div.unit__button-arrow-wrap
                             button.button.button--theme-arrow.button--arrow-prev
