--- a/app/css/main.css
+++ b/app/css/main.css
@@ -389,6 +389,10 @@ body {
 .unit__info--block {
   display: block;
 }
+.unit__info--block41 {
+  display: block;
+  height: 41px;
+}
 .unit__info--small-medium {
   font-size: 12px;
   font-weight: 600;
@@ -402,14 +406,28 @@ body {
 .unit__info--medium {
   font-size: 21px;
   font-weight: 500;
-  letter-spacing: 3px;
+  font-family: Montserrat, sans-serif;
+}
+.unit__info--medium23 {
+  font-size: 23px;
+  font-weight: 500;
   font-family: Montserrat, sans-serif;
 }
 .unit__info--big-medium {
   font-size: 36px;
   font-weight: 500;
-  letter-spacing: 3px;
   font-family: Montserrat, sans-serif;
+}
+.unit__info--biggest-medium {
+  font-size: 38px;
+  font-weight: 500;
+  font-family: Montserrat, sans-serif;
+}
+.unit__info--letter-spacing1 {
+  letter-spacing: 1px;
+}
+.unit__info--letter-spacing3 {
+  letter-spacing: 3px;
 }
 .unit__info--black-text {
   color: #363636;
@@ -970,7 +988,7 @@ body {
   position: relative;
   height: 83px;
   width: 83px;
-  margin-bottom: 35px;
+  margin-bottom: 32px;
   text-align: center;
   background: url("../img/rectangle-blue.png") no-repeat center;
 }
