--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -3,6 +3,10 @@
   &--block
     display block
 
+  &--block41
+    display block
+    height 41px
+
   &--small-medium
     font-size 12px
     font-weight 600
@@ -16,14 +20,28 @@
   &--medium
     font-size 21px
     font-weight 500
-    letter-spacing 3px
+    font-family Montserrat, sans-serif;
+
+  &--medium23
+    font-size 23px
+    font-weight 500
     font-family Montserrat, sans-serif;
 
   &--big-medium
     font-size 36px
     font-weight 500
-    letter-spacing 3px
     font-family Montserrat, sans-serif;
+
+  &--biggest-medium
+    font-size 38px
+    font-weight 500
+    font-family Montserrat, sans-serif;
+
+  &--letter-spacing1
+    letter-spacing 1px
+
+  &--letter-spacing3
+    letter-spacing 3px
 
   &--black-text
     color #363636
