--- a/app/stylus/blocks/unit/__article/__article.styl
+++ b/app/stylus/blocks/unit/__article/__article.styl
@@ -16,6 +16,9 @@
   &--centered-text
     text-align center
 
+  &--margin-top10
+    margin-top 10px
+
   &--fix-for-your-buildig-is
     margin-top 17px
     margin-bottom 21px
