--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -223,6 +223,13 @@
     font-size 0
     text-align center
 
+  &__horiz-inline-center-bottom-wrap
+    position absolute
+    bottom 28px
+    width inherit
+    font-size 0
+    text-align center
+
   &__horiz-inline-wrap
     font-size 0
 
