--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -128,8 +128,9 @@ div.main.main--theme-white-gr
                     span.unit__info.unit__info--norm-medium.unit__info--black-text Tony SH. Schults
                     div.icon.icon--person-rate5
 
-                p.unit__article.unit__article--centered-text.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from concept-through-construction.
-                div.unit__horiz-inline-center-wrap
+                p.unit__article.unit__article--centered-text.unit__article--margin-top10.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from
+                //*concept-through-construction.*/
+                div.unit__horiz-inline-center-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--inline
 
