Рефакторинг страницы home-page. Блоки с аватаром. Райтинг person. Также созданы отдельные файлы для элементов горизонтальной линии и числа

--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -63,17 +63,21 @@
     background url("../img/avatar.png") no-repeat center
 
   &--person-rate4
+    display inline-block
+    width 63px
     height 14px
-    margin-top 10px
     background url("../img/rate4.png") no-repeat center
 
   &--person-rate1none
+    display inline-block
+    width 16px
     height 14px
     background url("../img/rate1none.png") no-repeat center
 
   &--person-rate5
+    display inline-block
+    width 79px
     height 14px
-    margin-top 10px
     background url("../img/rate5.png") no-repeat center
 
   &--blue-square
