--- a/app/css/main.css
+++ b/app/css/main.css
@@ -481,6 +481,11 @@ body {
 .unit__person-info-wrap {
   text-align: center;
 }
+.unit__person-rate-inline-wrap {
+  margin-top: 10px;
+  font-size: 0;
+  text-align: center;
+}
 .unit__horiz-inline-center-wrap {
   font-size: 0;
   text-align: center;
@@ -981,17 +986,21 @@ body {
   background: url("../img/avatar.png") no-repeat center;
 }
 .icon--person-rate4 {
+  display: inline-block;
+  width: 63px;
   height: 14px;
-  margin-top: 10px;
   background: url("../img/rate4.png") no-repeat center;
 }
 .icon--person-rate1none {
+  display: inline-block;
+  width: 16px;
   height: 14px;
   background: url("../img/rate1none.png") no-repeat center;
 }
 .icon--person-rate5 {
+  display: inline-block;
+  width: 79px;
   height: 14px;
-  margin-top: 10px;
   background: url("../img/rate5.png") no-repeat center;
 }
 .icon--blue-square {
