--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -112,7 +112,9 @@ div.main.main--theme-white-gr
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
                     span.unit__info.unit__info--norm-medium.unit__info--black-text Martin H. Jhonsons
-                    div.icon.icon--person-rate4
+                    div.unit__person-rate-inline-wrap
+                        div.icon.icon--person-rate4
+                        div.icon.icon--person-rate1none
 
                 p.unit__article.unit__article--centered-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
 
@@ -126,7 +128,8 @@ div.main.main--theme-white-gr
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
                     span.unit__info.unit__info--norm-medium.unit__info--black-text Tony SH. Schults
-                    div.icon.icon--person-rate5
+                    div.unit__person-rate-inline-wrap
+                        div.icon.icon--person-rate5
 
                 p.unit__article.unit__article--centered-text.unit__article--margin-top10.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from
                 //*concept-through-construction.*/
