Рефакторинг страницы home-page. Рефакторинг footer

--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -165,7 +165,9 @@ div.main.main--theme-white-gr
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
                     span.unit__info.unit__info--norm-medium.unit__info--black-text David Mc. Adams
-                    div.icon.icon--person-rate4
+                    div.unit__person-rate-inline-wrap
+                        div.icon.icon--person-rate4
+                        div.icon.icon--person-rate1none
 
                 p.unit__article.unit__article--centered-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
 
