--- a/app/views/footer/footer.pug
+++ b/app/views/footer/footer.pug
@@ -10,7 +10,7 @@ footer.footer.footer_theme-white-grey
                     li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="our-services.html", target="blank") Services
                     li.menu__item.footer__container--menu-items-space
-                        a.menu__item_text.footer_theme-text-menu(href="#") OurWorks
+                        a.menu__item_text.footer_theme-text-menu.footer_theme-text-mark(href="#") OurWorks
                     li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") News & events
                     li.menu__item.footer__container--menu-items-space
