Рефакторинг страницы home-page. Рефакторинг блоков с дробью

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -404,7 +404,7 @@ body {
   font-family: Montserrat, sans-serif;
 }
 .unit__info--medium {
-  font-size: 21px;
+  font-size: 22px;
   font-weight: 500;
   font-family: Montserrat, sans-serif;
 }
@@ -426,8 +426,21 @@ body {
 .unit__info--letter-spacing1 {
   letter-spacing: 1px;
 }
+.unit__info--letter-spacing2 {
+  letter-spacing: 2px;
+}
 .unit__info--letter-spacing3 {
   letter-spacing: 3px;
+}
+.unit__info--letter-spacing4 {
+  letter-spacing: 4px;
+}
+.unit__info--supper {
+  position: relative;
+  bottom: 23%;
+}
+.unit__info--condensed-letter {
+  font-stretch: condensed;
 }
 .unit__info--black-text {
   color: #363636;
@@ -440,6 +453,9 @@ body {
 }
 .unit__info--dark-grey-text {
   color: #707070;
+}
+.unit__info--white-white-blue {
+  color: #8bcffb;
 }
 .unit__info--white-blue-text {
   color: #fff;
@@ -456,7 +472,14 @@ body {
   margin-top: 19px;
   margin-bottom: -13px;
 }
+.unit__info--fix-right-margin6 {
+  margin-right: 6px;
+}
+.unit__info--fix-right-margin4 {
+  margin-right: 4px;
+}
 .unit__info-wrap {
+  position: relative;
   display: block;
   height: 44px;
   margin: 24px 0 18px;
@@ -672,47 +695,6 @@ body {
       font-size 18px
       font-weight 400
 
-  //Элемент заметка
-  &__mark
-    &_theme-blue-white
-      color #8bcffb
-      font-family Montserrat, sans-serif;
-      font-size 14px
-      font-weight 400
-
-  //Элемент статья
-  &__article
-    &_theme-text
-      color #989898
-      font-family Montserrat, sans-serif;
-      font-size 14px
-      font-weight 400
-      line-height 22px
-
-  //Элемент горизонтальной линии
-  &__horizontal
-    width 40px
-    margin-left 0
-    border-width 3px
-    &_black-solid
-      border solid #363636
-    &_white-solid
-      border solid #ffffff
-
-  //Элемент номер
-  &__number
-    width 71px
-    height 71px
-    &_theme-yellow
-      background-color #ffe400
-      color #363636
-      font-family Montserrat, sans-serif;
-      font-size 28px
-      font-weight 400
-      text-align center
-    &_middle
-      display: inline-block;
-
   //Элемент подпись иконки
   &__icon-caption
     display block
@@ -726,21 +708,6 @@ body {
       font-weight 400
       text-transform uppercase
       letter-spacing 0.08px
-
-  //Элемент стрелки
-  &__arrow
-    position absolute
-    border 12px solid transparent
-
-    &_down
-      left 130px
-      border-top 12px solid #ffffff
-
-    &_up
-      top 269px
-      left 130px
-      border-bottom 12px solid #ffffff
-
 
   //Размещение формы в unit aside
   &__inner-form-aside
