--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -18,7 +18,7 @@
     font-family Montserrat, sans-serif;
 
   &--medium
-    font-size 21px
+    font-size 22px
     font-weight 500
     font-family Montserrat, sans-serif;
 
@@ -40,8 +40,21 @@
   &--letter-spacing1
     letter-spacing 1px
 
+  &--letter-spacing2
+    letter-spacing 2px
+
   &--letter-spacing3
     letter-spacing 3px
+
+  &--letter-spacing4
+    letter-spacing 4px
+
+  &--supper
+    position relative
+    bottom 23%
+
+  &--condensed-letter
+    font-stretch condensed
 
   &--black-text
     color #363636
@@ -54,6 +67,9 @@
 
   &--dark-grey-text
     color #707070
+
+  &--white-white-blue
+    color #8bcffb
 
   &--white-blue-text
     color #ffffff
@@ -69,3 +85,9 @@
   &--fix-for-popular-posts
     margin-top 19px
     margin-bottom -13px
+
+  &--fix-right-margin6
+    margin-right 6px
+
+  &--fix-right-margin4
+    margin-right 4px
