--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -72,109 +72,16 @@
 
   //Элемент заголовок
   @import "__title/__title.styl"
-  //&__title
-  //  margin-top -4px
-  //  margin-bottom .8em
-  //  font-size 14px
-  //
-  //  &--bold
-  //    font-family Montserrat, sans-serif;
-  //    font-size 18px
-  //    font-weight 700
-  //    color #363636
-  //
-  //  &--big-bold
-  //    margin-bottom .45em
-  //    font-size 27px
-  //    font-weight 700
-  //    font-family Montserrat, sans-serif;
-  //    text-transform uppercase
-  //
-  //  &--uppercase-disabled
-  //    text-transform none
-  //
-  //  &--theme-unit-black-title
-  //    width 306px
-  //    color #363636
-  //
-  //  &--text-width
-  //    width 155px
-  //    color #363636
-  //
-  //  &--white-text
-  //    color #ffffff
-  //
-  //  &--letter-spacing018
-  //    letter-spacing .18px
-  //
-  //  &--top-margin2
-  //    margin-top 2px
-  //
-  //  &--fix-margin-bottom-news
-  //    margin-bottom  1em
 
   //Элемент горизонтальной линии
   @import "__horizontal/__horizontal.styl"
 
   //Элемент для информации
   @import "__info/__info.styl"
-  //&__info
-  //
-  //  &--block
-  //    display block
-  //
-  //  &--med-text
-  //    font-size 20px
-  //    font-weight 600
-  //    font-family Montserrat, sans-serif;
-  //
-  //  &--big-text
-  //    font-size 36px
-  //    font-weight 600
-  //    letter-spacing 3.94px
-  //    font-family Montserrat, sans-serif;
-  //    text-transform uppercase
-  //
-  //  &--small-text
-  //    font-size 12px
-  //    font-weight 600
-  //    font-family Montserrat, sans-serif;
-  //    text-transform uppercase
-  //
-  //  &--norm-bold-text
-  //    font-size 14px
-  //    font-weight 900
-  //    font-family Montserrat, sans-serif
-  //
-  //  &--norm-text
-  //    font-size 14px
-  //    font-weight 700
-  //    font-family Montserrat, sans-serif
-  //
-  //  &--black-text
-  //    color #363636
-  //
-  //  &--white-text
-  //    color #ffffff
-  //
-  //  &--grey-text
-  //    color #a0a0a0
-  //
-  //  &--dark-grey-text
-  //    color #707070
-  //
-  //  &--white-blue-text
-  //    color #ffffff
-  //    opacity .5
-  //
-  //  &--letter-spacing035
-  //    letter-spacing .35px
-  //
-  //  &--letter-spacing047
-  //    letter-spacing .47px
 
   //Элемент info-wrap
   &__info-wrap
+    position relative
     display block
     height 44px
     margin 24px 0 18px
