--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -19,8 +19,8 @@ div.main.main--theme-white-gr
                         div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--big-medium.unit__info--black-text.unit__info--letter-spacing3 01
-                        sup.unit__info.unit__info--medium.unit__info--black-text /03
+                    span.unit__info.unit__info--biggest-medium.unit__info--letter-spacing4.unit__info--black-text 01
+                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--letter-spacing2.unit__info--black-text /03
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev
@@ -64,8 +64,8 @@ div.main.main--theme-white-gr
                         div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--biggest-medium.unit__info--black-text.unit__info--letter-spacing1 03
-                        sup.unit__info.unit__info--medium23.unit__info--black-text  / 06
+                    span.unit__info.unit__info--biggest-medium.unit__info--fix-right-margin4.unit__info--black-text.unit__info--letter-spacing1 03
+                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--black-text  / 06
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev-hover
@@ -202,8 +202,8 @@ div.main.main--theme-white-gr
                                 div.icon.icon--arrow-next-inside
 
                         div.unit__info-wrap
-                            span.unit__info.unit__info--big-medium.unit__info--black-text.unit__info--letter-spacing3 01
-                                sup.unit__info.unit__info--medium.unit__info--black-text  / 09
+                            span.unit__info.unit__info--big-medium.unit__info--black-text.unit__info--fix-right-margin6 01
+                            span.unit__info.unit__info--supper.unit__info--medium.unit__info--letter-spacing1.unit__info--black-text  / 09
 
                         div.unit__button-arrow-wrap
                             button.button.button--theme-arrow.button--arrow-prev
