--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -6,6 +6,7 @@
   &--block41
     display block
     height 41px
+    margin-left -3px
 
   &--small-medium
     font-size 12px
@@ -55,7 +56,13 @@
     left 1px
 
   &--condensed-letter
-    font-stretch condensed
+    display inline-block
+    transform scaleX(.8)
+    //font-stretch condensed
+
+  &--space
+    display inline-block
+    width 12px
 
   &--black-text
     color #363636
