--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -141,14 +141,27 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--ligthinig-blue
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 55 000
+                span.unit__info.unit__info--block41.unit__info--biggest-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
+                    span.unit__info.unit__info--condensed-letter 5
+                    span.unit__info.unit__info--condensed-letter 5
+                    span.unit__info.unit__info--space
+                    span.unit__info.unit__info--condensed-letter 0
+                    span.unit__info.unit__info--condensed-letter 0
+                    span.unit__info.unit__info--condensed-letter 0
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Expert Witness
 
             div.unit.unit--theme-foto
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--raindrop
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 124 600
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
+                    span.unit__info.unit__info--condensed-letter 1
+                    span.unit__info.unit__info--condensed-letter 2
+                    span.unit__info.unit__info--condensed-letter 4
+                    span.unit__info.unit__info--space
+                    span.unit__info.unit__info--condensed-letter 6
+                    span.unit__info.unit__info--condensed-letter 0
+                    span.unit__info.unit__info--condensed-letter 0
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Construction
 
             div.unit.unit--theme-blue
@@ -175,14 +188,26 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--setting-tool-blue
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 18 000
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
+                    span.unit__info.unit__info--condensed-letter 1
+                    span.unit__info.unit__info--condensed-letter 8
+                    span.unit__info.unit__info--space
+                    span.unit__info.unit__info--condensed-letter 0
+                    span.unit__info.unit__info--condensed-letter 0
+                    span.unit__info.unit__info--condensed-letter 0
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Procurement
 
             div.unit.unit--white
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--light-bulb
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing3 78 150
+                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
+                    span.unit__info.unit__info--condensed-letter 7
+                    span.unit__info.unit__info--condensed-letter 8
+                    span.unit__info.unit__info--space
+                    span.unit__info.unit__info--condensed-letter 1
+                    span.unit__info.unit__info--condensed-letter 5
+                    span.unit__info.unit__info--condensed-letter 0
                 span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Project Managments
 
             div.unit.unit--vertical-double-unit.unit--white
