--- a/app/stylus/blocks/unit/__horizontal/__horizontal.styl
+++ b/app/stylus/blocks/unit/__horizontal/__horizontal.styl
@@ -1,18 +1,23 @@
 &__horizontal
-  width 34px
+  width 30px
   margin-left 0
 
   &--black-solid
-    border solid #363636
+    border 5px solid #363636
+    border-bottom transparent
 
   &--white-solid
-    border solid #ffffff
+    border 5px solid #ffffff
+    border-top transparent
 
   &--width-small
-    width 21px
+    width 17px
 
   &--opasity-half
     opacity .5
+
+  &--opasity02
+    opacity .2
 
   &--inline
     display inline-block
