--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -117,7 +117,8 @@
 
   &__horiz-inline-center-bottom-wrap
     position absolute
-    bottom 28px
+    bottom 29px
+    left 29px
     width inherit
     font-size 0
     text-align center
