--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -65,7 +65,8 @@
     background-color #fcf3d3
 
   &--dark-grey
-    background-color #36383b
+    //background-color #36383b
+    background-color #252628
 
   &--transparent
     background-color transparent
