--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -17,7 +17,8 @@ body
       background-color #d6d6d6
 
     &--theme-dark-grey
-      background-color #36383b
+      //background-color #36383b
+      background-color #252628
 
     &--height-home-page
       min-height 826px
